# proxy-wasm-rust-sdk-grpc-example

./: Cargo.toml  README.md
config/: config-grpc-call.yaml
grpc_call/: Cargo.toml  build.rs
grpc_call/src/: lib.rs
grpc_stream/: Cargo.toml
grpc_stream/src/: helloworld.rs  lib.rs
run/: config-grpc-stream.yaml
stream/: Cargo.toml  build.rs
stream/src/: lib.rs  route_guide.rs
