[package]
name = "grpc_call"
version = "0.1.0"
authors = ["Rei Shimizu <Shikugawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proxy-wasm = { path = "../../proxy-wasm-rust-sdk" }
log = "0.4"
protobuf = "2"

[build-dependencies]
protoc-rust = "2.0"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[lib]
crate-type = ["cdylib"]
